--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
 
         <div class="container">
-            <!--APPLICATION-->
+            <!--APPLICATION Inicio-->
             <div id="App" class="row pt-5">
                 <div class="col-md-4">
                      <div class="card">
